--- a/tokens/config.json
+++ b/tokens/config.json
@@ -3,12 +3,116 @@
     "color": {
       "palette": {
         "black": {
-          "$value": "#000",
-          "$type": "color"
+          "solid": {
+            "$value": "#000",
+            "$type": "color"
+          },
+          "translucent": {
+            "1": {
+              "$value": "oklch(0 0 0 / 0.12)",
+              "$type": "color"
+            },
+            "2": {
+              "$value": "oklch(0 0 0 / 0.18)",
+              "$type": "color"
+            },
+            "3": {
+              "$value": "oklch(0 0 0 / 0.24)",
+              "$type": "color"
+            },
+            "4": {
+              "$value": "oklch(0 0 0 / 0.30)",
+              "$type": "color"
+            },
+            "5": {
+              "$value": "oklch(0 0 0 / 0.36)",
+              "$type": "color"
+            },
+            "6": {
+              "$value": "oklch(0 0 0 / 0.42)",
+              "$type": "color"
+            },
+            "7": {
+              "$value": "oklch(0 0 0 / 0.48)",
+              "$type": "color"
+            },
+            "8": {
+              "$value": "oklch(0 0 0 / 0.54)",
+              "$type": "color"
+            },
+            "9": {
+              "$value": "oklch(0 0 0 / 0.60)",
+              "$type": "color"
+            },
+            "10": {
+              "$value": "oklch(0 0 0 / 0.66)",
+              "$type": "color"
+            },
+            "11": {
+              "$value": "oklch(0 0 0 / 0.72)",
+              "$type": "color"
+            },
+            "12": {
+              "$value": "oklch(0 0 0 / 0.78)",
+              "$type": "color"
+            }
+          }
         },
         "white": {
-          "$value": "#fff",
-          "$type": "color"
+          "solid": {
+            "$value": "#fff",
+            "$type": "color"
+          },
+          "translucent": {
+            "1": {
+              "$value": "oklch(1 0 0 / 0.12)",
+              "$type": "color"
+            },
+            "2": {
+              "$value": "oklch(1 0 0 / 0.18)",
+              "$type": "color"
+            },
+            "3": {
+              "$value": "oklch(1 0 0 / 0.24)",
+              "$type": "color"
+            },
+            "4": {
+              "$value": "oklch(1 0 0 / 0.30)",
+              "$type": "color"
+            },
+            "5": {
+              "$value": "oklch(1 0 0 / 0.36)",
+              "$type": "color"
+            },
+            "6": {
+              "$value": "oklch(1 0 0 / 0.42)",
+              "$type": "color"
+            },
+            "7": {
+              "$value": "oklch(1 0 0 / 0.48)",
+              "$type": "color"
+            },
+            "8": {
+              "$value": "oklch(1 0 0 / 0.54)",
+              "$type": "color"
+            },
+            "9": {
+              "$value": "oklch(1 0 0 / 0.60)",
+              "$type": "color"
+            },
+            "10": {
+              "$value": "oklch(1 0 0 / 0.66)",
+              "$type": "color"
+            },
+            "11": {
+              "$value": "oklch(1 0 0 / 0.72)",
+              "$type": "color"
+            },
+            "12": {
+              "$value": "oklch(1 0 0 / 0.78)",
+              "$type": "color"
+            }
+          }
         },
         "grey": {
           "solid": {
@@ -108,6 +212,108 @@
             },
             "12": {
               "$value": "oklch(0.40 0.01 264 / 0.78)",
+              "$type": "color"
+            }
+          }
+        },
+        "stone": {
+          "solid": {
+            "1": {
+              "$value": "oklch(0.96 0.003 56)",
+              "$type": "color"
+            },
+            "2": {
+              "$value": "oklch(0.92 0.005 56)",
+              "$type": "color"
+            },
+            "3": {
+              "$value": "oklch(0.88 0.005 56)",
+              "$type": "color"
+            },
+            "4": {
+              "$value": "oklch(0.84 0.008 56)",
+              "$type": "color"
+            },
+            "5": {
+              "$value": "oklch(0.76 0.008 56)",
+              "$type": "color"
+            },
+            "6": {
+              "$value": "oklch(0.68 0.008 56)",
+              "$type": "color"
+            },
+            "7": {
+              "$value": "oklch(0.40 0.01 56)",
+              "$type": "color"
+            },
+            "8": {
+              "$value": "oklch(0.36 0.01 56)",
+              "$type": "color"
+            },
+            "9": {
+              "$value": "oklch(0.32 0.01 56)",
+              "$type": "color"
+            },
+            "10": {
+              "$value": "oklch(0.22 0.008 56)",
+              "$type": "color"
+            },
+            "11": {
+              "$value": "oklch(0.19 0.006 56)",
+              "$type": "color"
+            },
+            "12": {
+              "$value": "oklch(0.16 0.005 56)",
+              "$type": "color"
+            }
+          },
+          "translucent": {
+            "1": {
+              "$value": "oklch(0.40 0.01 56 / 0.12)",
+              "$type": "color"
+            },
+            "2": {
+              "$value": "oklch(0.40 0.01 56 / 0.18)",
+              "$type": "color"
+            },
+            "3": {
+              "$value": "oklch(0.40 0.01 56 / 0.24)",
+              "$type": "color"
+            },
+            "4": {
+              "$value": "oklch(0.40 0.01 56 / 0.30)",
+              "$type": "color"
+            },
+            "5": {
+              "$value": "oklch(0.40 0.01 56 / 0.36)",
+              "$type": "color"
+            },
+            "6": {
+              "$value": "oklch(0.40 0.01 56 / 0.42)",
+              "$type": "color"
+            },
+            "7": {
+              "$value": "oklch(0.40 0.01 56 / 0.48)",
+              "$type": "color"
+            },
+            "8": {
+              "$value": "oklch(0.40 0.01 56 / 0.54)",
+              "$type": "color"
+            },
+            "9": {
+              "$value": "oklch(0.40 0.01 56 / 0.60)",
+              "$type": "color"
+            },
+            "10": {
+              "$value": "oklch(0.40 0.01 56 / 0.66)",
+              "$type": "color"
+            },
+            "11": {
+              "$value": "oklch(0.40 0.01 56 / 0.72)",
+              "$type": "color"
+            },
+            "12": {
+              "$value": "oklch(0.40 0.01 56 / 0.78)",
               "$type": "color"
             }
           }
@@ -229,15 +435,15 @@
               "$type": "color"
             },
             "4": {
-              "$value": "oklch(0.80 0.16 264)",
+              "$value": "oklch(0.78 0.20 264)",
               "$type": "color"
             },
             "5": {
-              "$value": "oklch(0.76 0.20 264)",
+              "$value": "oklch(0.74 0.20 264)",
               "$type": "color"
             },
             "6": {
-              "$value": "oklch(0.72 0.24 264)",
+              "$value": "oklch(0.70 0.24 264)",
               "$type": "color"
             },
             "7": {
@@ -433,15 +639,15 @@
               "$type": "color"
             },
             "4": {
-              "$value": "oklch(0.80 0.16 155)",
+              "$value": "oklch(0.78 0.16 155)",
               "$type": "color"
             },
             "5": {
-              "$value": "oklch(0.76 0.16 155)",
+              "$value": "oklch(0.74 0.16 155)",
               "$type": "color"
             },
             "6": {
-              "$value": "oklch(0.72 0.16 155)",
+              "$value": "oklch(0.70 0.16 155)",
               "$type": "color"
             },
             "7": {
