fix: primary > fg > muted/subtle

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -197,16 +197,12 @@
               }
             },
             "muted": {
-              "default": {
-                "$type": "color",
-                "$value": "{config.color.palette.grey.translucent.12}"
-              }
+              "$value": "{config.color.palette.black.translucent.9}",
+              "$type": "color"
             },
             "subtle": {
-              "default": {
-                "$type": "color",
-                "$value": "{config.color.palette.grey.translucent.6}"
-              }
+              "$value": "{config.color.palette.black.translucent.3}",
+              "$type": "color"
             },
             "onSolid": {
               "default": {
