--- a/tokens/application.json
+++ b/tokens/application.json
@@ -197,12 +197,16 @@
               }
             },
             "muted": {
-              "$value": "{config.color.palette.black.translucent.9}",
-              "$type": "color"
+              "default": {
+                "$value": "{config.color.palette.black.translucent.9}",
+                "$type": "color"
+              }
             },
             "subtle": {
-              "$value": "{config.color.palette.black.translucent.3}",
-              "$type": "color"
+              "default": {
+                "$value": "{config.color.palette.black.translucent.3}",
+                "$type": "color"
+              }
             },
             "onSolid": {
               "default": {
