fix: avatar: svg dims and font sizes

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1500,6 +1500,14 @@
           "3xl": {
             "$value": "1.125rem",
             "$type": "fontSizes"
+          },
+          "4xl": {
+            "$value": "1.1875rem",
+            "$type": "fontSizes"
+          },
+          "5xl": {
+            "$value": "1.25rem",
+            "$type": "fontSizes"
           }
         },
         "symbol": {
@@ -1841,12 +1849,28 @@
             "$value": "{config.dimension.spacing.base} * 5",
             "$type": "dimension"
           },
+          "5_25": {
+            "$value": "{config.dimension.spacing.base} * 5.25",
+            "$type": "dimension"
+          },
           "5_5": {
             "$value": "{config.dimension.spacing.base} * 5.5",
             "$type": "dimension"
           },
+          "5_75": {
+            "$value": "{config.dimension.spacing.base} * 5.75",
+            "$type": "dimension"
+          },
           "6": {
             "$value": "{config.dimension.spacing.base} * 6",
+            "$type": "dimension"
+          },
+          "6_5": {
+            "$value": "{config.dimension.spacing.base} * 6.5",
+            "$type": "dimension"
+          },
+          "6_75": {
+            "$value": "{config.dimension.spacing.base} * 6.75",
             "$type": "dimension"
           },
           "7": {
