fix: avatar > inline > radius

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1962,6 +1962,10 @@
             }
           },
           "default": {
+            "2xs": {
+              "$value": "{config.dimension.radius.base} * 2",
+              "$type": "dimension"
+            },
             "xs": {
               "$value": "{config.dimension.radius.base} * 2.5",
               "$type": "dimension"
