feat: new type sizes

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1381,6 +1381,10 @@
       },
       "surface": {
         "display": {
+          "xs": {
+            "$value": "130%",
+            "$type": "lineHeights"
+          },
           "sm": {
             "$value": "120%",
             "$type": "lineHeights"
@@ -1405,6 +1409,10 @@
           },
           "lg": {
             "$value": "135%",
+            "$type": "lineHeights"
+          },
+          "xl": {
+            "$value": "130%",
             "$type": "lineHeights"
           }
         },
@@ -1555,6 +1563,10 @@
       },
       "surface": {
         "display": {
+          "xs": {
+            "$value": "1.25rem",
+            "$type": "fontSizes"
+          },
           "sm": {
             "$value": "1.75rem",
             "$type": "fontSizes"
@@ -1579,6 +1591,10 @@
           },
           "lg": {
             "$value": "1.625rem",
+            "$type": "fontSizes"
+          },
+          "xl": {
+            "$value": "1.875rem",
             "$type": "fontSizes"
           }
         },
@@ -1657,6 +1673,10 @@
       },
       "surface": {
         "display": {
+          "xs": {
+            "$value": "0",
+            "$type": "letterSpacing"
+          },
           "sm": {
             "$value": "0",
             "$type": "letterSpacing"
@@ -1680,6 +1700,10 @@
             "$type": "letterSpacing"
           },
           "lg": {
+            "$value": "0",
+            "$type": "letterSpacing"
+          },
+          "xl": {
             "$value": "0",
             "$type": "letterSpacing"
           }
