feat: new type sizes, overhauled typography

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1381,26 +1381,26 @@
       },
       "surface": {
         "display": {
-          "xs": {
-            "$value": "130%",
-            "$type": "lineHeights"
-          },
           "sm": {
-            "$value": "120%",
+            "$value": "100%",
             "$type": "lineHeights"
           },
           "md": {
-            "$value": "115%",
+            "$value": "100%",
             "$type": "lineHeights"
           },
           "lg": {
-            "$value": "110%",
+            "$value": "100%",
+            "$type": "lineHeights"
+          },
+          "xl": {
+            "$value": "100%",
             "$type": "lineHeights"
           }
         },
         "title": {
           "sm": {
-            "$value": "145%",
+            "$value": "140%",
             "$type": "lineHeights"
           },
           "md": {
@@ -1408,7 +1408,7 @@
             "$type": "lineHeights"
           },
           "lg": {
-            "$value": "135%",
+            "$value": "130%",
             "$type": "lineHeights"
           },
           "xl": {
@@ -1428,7 +1428,7 @@
         },
         "subtitle": {
           "sm": {
-            "$value": "145%",
+            "$value": "140%",
             "$type": "lineHeights"
           },
           "md": {
@@ -1436,7 +1436,11 @@
             "$type": "lineHeights"
           },
           "lg": {
-            "$value": "135%",
+            "$value": "140%",
+            "$type": "lineHeights"
+          },
+          "xl": {
+            "$value": "140%",
             "$type": "lineHeights"
           }
         },
@@ -1563,19 +1567,19 @@
       },
       "surface": {
         "display": {
-          "xs": {
+          "sm": {
             "$value": "1.25rem",
             "$type": "fontSizes"
           },
-          "sm": {
+          "md": {
             "$value": "1.75rem",
             "$type": "fontSizes"
           },
-          "md": {
+          "lg": {
             "$value": "2.75rem",
             "$type": "fontSizes"
           },
-          "lg": {
+          "xl": {
             "$value": "3.75rem",
             "$type": "fontSizes"
           }
@@ -1610,6 +1614,10 @@
           "lg": {
             "$value": "1.125rem",
             "$type": "fontSizes"
+          },
+          "xl": {
+            "$value": "1.25rem",
+            "$type": "fontSizes"
           }
         },
         "subtitle": {
@@ -1623,6 +1631,10 @@
           },
           "lg": {
             "$value": "1.375rem",
+            "$type": "fontSizes"
+          },
+          "xl": {
+            "$value": "1.5rem",
             "$type": "fontSizes"
           }
         },
@@ -1673,10 +1685,6 @@
       },
       "surface": {
         "display": {
-          "xs": {
-            "$value": "0",
-            "$type": "letterSpacing"
-          },
           "sm": {
             "$value": "0",
             "$type": "letterSpacing"
@@ -1686,6 +1694,10 @@
             "$type": "letterSpacing"
           },
           "lg": {
+            "$value": "0",
+            "$type": "letterSpacing"
+          },
+          "xl": {
             "$value": "0",
             "$type": "letterSpacing"
           }
@@ -1720,6 +1732,10 @@
           "lg": {
             "$value": "0",
             "$type": "letterSpacing"
+          },
+          "xl": {
+            "$value": "0",
+            "$type": "letterSpacing"
           }
         },
         "callout": {
@@ -1732,6 +1748,10 @@
             "$type": "letterSpacing"
           },
           "lg": {
+            "$value": "0",
+            "$type": "letterSpacing"
+          },
+          "xl": {
             "$value": "0",
             "$type": "letterSpacing"
           }
