fix: config > font weight

--- a/tokens/config.json
+++ b/tokens/config.json
@@ -831,36 +831,44 @@
       }
     },
     "fontWeight": {
+      "thin": {
+        "$value": "100",
+        "$type": "other"
+      },
+      "extralight": {
+        "$value": "200",
+        "$type": "other"
+      },
       "light": {
-        "$value": "Light",
+        "$value": "300",
         "$type": "other"
       },
       "regular": {
-        "$value": "Regular",
+        "$value": "400",
         "$type": "other"
       },
       "book": {
-        "$value": "Book",
+        "$value": "450",
         "$type": "other"
       },
       "medium": {
-        "$value": "Medium",
+        "$value": "500",
         "$type": "other"
       },
       "semibold": {
-        "$value": "Semibold",
+        "$value": "600",
         "$type": "other"
       },
       "bold": {
-        "$value": "Bold",
+        "$value": "700",
         "$type": "other"
       },
       "extrabold": {
-        "$value": "Extrabold",
+        "$value": "800",
         "$type": "other"
       },
       "black": {
-        "$value": "Black",
+        "$value": "900",
         "$type": "other"
       }
     },
